--- a/terms.html
+++ b/terms.html
@@ -1,61 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>Terms of Service</title>
 </head>
-<
+<body>
 
-## 📜 Terms of Service
+<h1>📜 Terms of Service</h1>
 
-**Last Updated:** *(14 january 2026)*
+<p><strong>Last Updated:</strong> 14 January 2026</p>
 
-### 1. Acceptance of Terms
-
+<h2>1. Acceptance of Terms</h2>
+<p>
 By inviting and using this Discord bot (the “Bot”), you agree to these Terms of Service.
 If you do not agree, please do not use the Bot.
+</p>
 
-### 2. Description of Service
+<h2>2. Description of Service</h2>
+<p>The Bot is a <strong>helper utility</strong> designed to assist users with:</p>
+<ul>
+  <li>Pokémon-related tracking and assistance</li>
+  <li>Daycare management helpers</li>
+  <li>Shiny Pokédex completion tracking</li>
+</ul>
+<p>
+The Bot is intended to be used <strong>alongside Pokétwo</strong> and similar Pokémon bots.
+</p>
 
-The Bot is a **helper utility** designed to assist users with:
+<h2>3. Disclaimer</h2>
+<ul>
+  <li>The Bot is not affiliated with, endorsed by, or officially connected to Pokétwo, Discord Inc., Nintendo, Game Freak, or The Pokémon Company.</li>
+  <li>Pokémon names, assets, and trademarks belong to their respective owners.</li>
+  <li>The Bot does not claim ownership over any Pokémon-related content.</li>
+</ul>
 
-* Pokémon-related tracking and assistance
-* Daycare management helpers
-* Shiny Pokédex completion tracking
-
-The Bot is intended to be used **alongside Pokétwo** and similar Pokémon bots.
-
-### 3. Disclaimer
-
-* The Bot is **not affiliated with, endorsed by, or officially connected to Pokétwo, Discord Inc., Nintendo, Game Freak, or The Pokémon Company**.
-* Pokémon names, assets, and trademarks belong to their respective owners.
-* The Bot does not claim ownership over any Pokémon-related content.
-
-### 4. User Responsibility
-
-Users are responsible for:
-
-* How they use the Bot
-* Ensuring their usage complies with Discord’s Terms of Service
-* Ensuring their usage complies with the rules of any third-party bots or services they interact with
-
+<h2>4. User Responsibility</h2>
+<p>Users are responsible for:</p>
+<ul>
+  <li>How they use the Bot</li>
+  <li>Ensuring their usage complies with Discord’s Terms of Service</li>
+  <li>Ensuring their usage complies with the rules of any third-party bots or services they interact with</li>
+</ul>
+<p>
 Misuse of the Bot may result in restricted or revoked access.
+</p>
 
-### 5. Availability
-
-The Bot is provided **“as is”** and **“as available”**.
+<h2>5. Availability</h2>
+<p>
+The Bot is provided <strong>“as is”</strong> and <strong>“as available”</strong>.
 The developer makes no guarantees regarding uptime, accuracy, or uninterrupted service.
+</p>
 
-### 6. Termination
-
+<h2>6. Termination</h2>
+<p>
 Access to the Bot may be terminated at any time for any reason, including misuse or abuse.
+</p>
 
-### 7. Changes to These Terms
-
+<h2>7. Changes to These Terms</h2>
+<p>
 These Terms may be updated at any time. Continued use of the Bot after changes implies acceptance of the updated Terms.
+</p>
 
-
->
-<h1>Terms of Service</h1>
-<p>PASTE YOUR TERMS TEXT HERE</p>
 </body>
 </html>
