--- a/terms.html
+++ b/terms.html
@@ -1,14 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Terms of Service</title>
+  <style>
+    body {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
+      font-family: Arial, Helvetica, sans-serif;
+      line-height: 1.6;
+      color: #222;
+      background-color: #ffffff;
+    }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 10px;
+    }
+
+    h2 {
+      margin-top: 30px;
+      color: #333;
+    }
+
+    p {
+      margin: 10px 0;
+    }
+
+    ul {
+      margin-left: 20px;
+    }
+
+    li {
+      margin: 6px 0;
+    }
+
+    .updated {
+      text-align: center;
+      color: #666;
+      font-size: 14px;
+      margin-bottom: 30px;
+    }
+  </style>
 </head>
 <body>
 
-<h1>📜 Terms of Service</h1>
-
-<p><strong>Last Updated:</strong> 14 January 2026</p>
+<h1>Terms of Service</h1>
+<div class="updated">Last Updated: 14 January 2026</div>
 
 <h2>1. Acceptance of Terms</h2>
 <p>
@@ -17,14 +56,14 @@ If you do not agree, please do not use the Bot.
 </p>
 
 <h2>2. Description of Service</h2>
-<p>The Bot is a <strong>helper utility</strong> designed to assist users with:</p>
+<p>The Bot is a helper utility designed to assist users with:</p>
 <ul>
   <li>Pokémon-related tracking and assistance</li>
   <li>Daycare management helpers</li>
   <li>Shiny Pokédex completion tracking</li>
 </ul>
 <p>
-The Bot is intended to be used <strong>alongside Pokétwo</strong> and similar Pokémon bots.
+The Bot is intended to be used alongside Pokétwo and similar Pokémon bots.
 </p>
 
 <h2>3. Disclaimer</h2>
@@ -41,13 +80,10 @@ The Bot is intended to be used <strong>alongside Pokétwo</strong> and similar P
   <li>Ensuring their usage complies with Discord’s Terms of Service</li>
   <li>Ensuring their usage complies with the rules of any third-party bots or services they interact with</li>
 </ul>
-<p>
-Misuse of the Bot may result in restricted or revoked access.
-</p>
 
 <h2>5. Availability</h2>
 <p>
-The Bot is provided <strong>“as is”</strong> and <strong>“as available”</strong>.
+The Bot is provided “as is” and “as available”.
 The developer makes no guarantees regarding uptime, accuracy, or uninterrupted service.
 </p>
 
